aws_terraform/eip.tf
resource "aws_eip" "nat_eip_1a" {
  vpc = true
}

resource "aws_eip" "nat_eip_1b" {
  vpc = true
}

resource "aws_eip" "nat_eip_1c" {
  vpc = true
}
